--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -987,6 +987,30 @@ jpn:
         # sir: "Monsieur"
         # syndicate: "Syndicat"
       # name: "Types de tiers"
+    france_crops_sets:
+      attributes:
+        # varieties: "Variétés"
+      items:
+        # alfalfa: "Luzerne"
+        # bean: "Haricot"
+        # beet: "Betterave"
+        # carrot: "Carotte"
+        # chicory: "Endive"
+        # corn: "Maïs"
+        # flax: "Lin"
+        # grass: "Graminée"
+        # grass_leguminous: "Graminée et Legumineuse"
+        # leguminous: "Legumineuse"
+        # meadow: "Prairie"
+        # nightshade: "Pomme de terre"
+        # peas: "Pois"
+        # rape: "Colza"
+        # spring_straw_cereal: "Céréales à paille de printemps"
+        # straw_cereal: "Céréales à paille"
+        # sunflower: "Tournesol"
+        # vetch: "Féverole"
+        # winter_straw_cereal: "Céréales à paille d'hiver"
+      # name: "Typologie de culture (France)"
     incidents:
       attributes:
         # target: "Cible"
@@ -1003,6 +1027,7 @@ jpn:
         # mammite: "Mammite"
         # nematoda_disease: "Maladies à nématodes"
         # other: "Autre"
+        # protozoa_disease: "Maladies virales"
         # respiratory_problem: "Problèmes respiratoires"
         # vegetal_pathology: "Pathologie végétale"
       # name: "Incidents"
@@ -1316,6 +1341,12 @@ jpn:
       items: #?
     nmp_poitou_charentes_abacus_6:
       attributes: #?
+      choices: #?
+      items: #?
+    nmp_poitou_charentes_abacus_7:
+      attributes: #?
+      choices:
+        crop_destruction_method: #?
       items: #?
     procedure_natures:
       attributes: #?
@@ -1809,12 +1840,14 @@ jpn:
         # actilact: "Actilact"
         # additive: "Additif"
         # alexis: "Alexis"
+        # amaranthaceae: "Amaranthaceae"
         # anas: "Palmipède"
         # animal: "Animal"
         # animal_group: "Troupeau"
         # animal_medicine: "Médicament vétérinaire"
         # antiseptic: "Antiseptique"
         # apache: "Blé Apache"
+        # apiaceae: "Apiaceae"
         # apis: "Apidés"
         # ascott: "Ascott"
         # asteraceae: "Astéracée"
@@ -1825,10 +1858,13 @@ jpn:
         # aves: "Oiseau"
         # aztec: "Aztec"
         # baler: "Botteleuse"
+        # bambusa: "Bambou"
+        # beta: "Betterave"
         # biensur: "Biensur"
         # bioproduct: "Produit vivant"
         # black_valley_soil: "Terres noires de vallées"
         # bos: "Bovin"
+        # brassica: "Colza"
         # brassica_napus: "Colza"
         # brassica_nigra: "Moutarde noire"
         # brassica_rapa: "Navet"
@@ -1844,12 +1880,14 @@ jpn:
         # champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         # chardonnay: "Chardonnay"
         # chemical_fertiliser: "Engrais chimique"
+        # cichorium: "Chicoré"
         # clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         # clay_soil: "Terre d’argile lourde"
         # courtot: "Courtot"
         # cultivable_land_parcel: "Parcelle culturale"
         # cultivable_zone: "Zone cultivable"
         # cultur: "Cultur"
+        # daucus: "Carotte"
         # disinfectant: "Désinfectant"
         # easement: "Aménagement foncier"
         # electricity: "Electricité"
@@ -1893,6 +1931,8 @@ jpn:
         # land_parcel_group: "Groupe de parcelles physiques"
         # lepus: "Lagomorphe"
         # levis: "Levis"
+        # linaceae: "Linaceae"
+        # linum: "Lin"
         # lona: "Lona"
         # malus: "Pommier"
         # mammalia: "Mammifère"
@@ -1913,9 +1953,11 @@ jpn:
         # mower: "Faucheuse"
         # oratorio: "Oratorio"
         # organic_matter: "Matière organique"
+        # oryza: "Riz"
         # osteichthyes: "Poissons osseux"
         # ovis: "Ovin"
         # pescadou: "Pescadou"
+        # phaseolus: "Haricot"
         # pinot_noir: "Pinot noir"
         # pisum: "Pisum"
         # plant: "Végétal"
@@ -1955,6 +1997,8 @@ jpn:
         # silty_clay_loam_soil: "Sol limono-argileux"
         # silty_clay_soil: "Sol argilo-limoneux"
         # soissons: "Soissons"
+        # solanaceae: "Solanaceae"
+        # solanum: "Pomme de terre"
         # sorghum: "Sorgho"
         # sower: "Semoir"
         # sprayer: "Pulvérisateur"
@@ -1973,11 +2017,14 @@ jpn:
         # tractor: "Tracteur"
         # trailer: "Remorque"
         # tremie: "Tremie"
+        # triticosecale: "Triticale"
+        # triticum: "Blé"
         # triticum_aestivum: "Blé tendre"
         # triticum_durum: "Blé dur"
         # triticum_spelta: "Épeautre"
         # ugni_blanc: "Ugni blanc"
         # valley_terrace_soil: "Sols de terrasse de vallée"
+        # vicia: "Vesces - Féverolle"
         # vitis: "Vigne"
         # vitis_vinifera: "Vitis vinifera"
         # water: "Eau"
